--- a/content/further_development.tex
+++ b/content/further_development.tex
@@ -14,6 +14,7 @@ váltani, nem fordultak elő kiugró késések, minden eszköz bőven a beállí
 Minden komponens megfelelően végezte a rá bízott feladatot, és a rendszer
 stabilan kihagyás nélkül működött a teljes üzemidő alatt. 
 
+
 %----------------------------------------------------------------------------
 \section{Továbbfejlesztési lehetőségek}
 %----------------------------------------------------------------------------
@@ -41,9 +42,53 @@ amely tovább növeli a rendszer teljesítményét és a maximálisan lefedhető
 %----------------------------------------------------------------------------
 \subsubsection{Shure Axient Digital rendszer} % A jel egyből a Dante hálózaton keresztül érkezik a keverőbe nincs A/D konverzió
 %----------------------------------------------------------------------------
+A Shure Axient Digital vezeték nélküli mikrofon rendszer a szakma egyik legjobb vezeték nélküli
+mikrofon rendszere. A rendszer kiváló hangminőséget, megbízhatóságot és rugalmasságot kínál,
+és a Dante hálózaton keresztül könnyen integrálható a már meglévő rendszerbe. A jelenlegi
+Shure ULXD vezeték nélküli mikrofon rendszerünk is kiváló minőségű, azonban sajnálatos módon 
+csak 48 kHz-es mintavételezési frekvenciával rendelkezik, míg az Axient Digital rendszer 96 kHz-es
+mintavételezési frekvenciával rendelkezik. Ezáltal a hangminőség jelentősen javulna a rendszerben,
+valamint így integrálhatóvá válna direkt módon a Dante hálózaton keresztül a keverőbe, így
+nem lenne szükség a hangot analóg jelekké alakítani, majd vissza. Ezáltal a hangminőség még 
+kevésbé romlik.
+Mint ez eddigi Dante eszközünket, ezt is a Dante Controller segítségével könnyen konfigurálhatjuk, akár egy fixen
+kijelölt csatornatartományban, amelyet a keverőpulton is könnyen beállíthatunk. Így mikor rendezvényre érkezünk,
+plug and play módon azonnal használhatjuk a mikrofonokat, nem kell a csatornákat újra össze párosítani.
+A Shure Wireless Workbench segítségével a mikrofonokat könnyen monitorozhatjuk, és a rendszer
+állapotát is ellenőrizhetjük távolról is. A rendszer bővítése jelentős költségekkel jár, így a
+bővítés előtt alaposan mérlegelni kell, hogy valóban szükséges-e.
+%----------------------------------------------------------------------------
+\begin
+    {figure}[H]
+    \centering
+    \includegraphics[width=100mm, keepaspectratio]{figures/axient_digital.png}
+    \caption{Shure Axient Digital vezeték nélküli mikrofon rendszer}
+    \label{fig:shure_axient_digital}
+\end{figure}
+%----------------------------------------------------------------------------
+
 
 %----------------------------------------------------------------------------
 \subsubsection{TASCAM multitrack recorder} %TASCAM – DA-6400
+%----------------------------------------------------------------------------
+Egy másik fejlesztési lehetőség a rendszerben egy multitrack recorder beszerzése.
+Ez a készülék lehetővé teszi a koncertek soksávos rögzítését, amelyeket később
+visszahallgathatunk, vagy akár további feldolgozásra is továbbíthatunk. A TASCAM
+DA-6400 egy 64 csatornás, 1U magas rackbe szerelhető multitrack recorder, amely
+Dante hálózaton keresztül képes a hangot fogadni és rögzíteni. A felvétel
+készítése során a hangot a Dante hálózaton keresztül kapja meg, így nem szükséges
+a hangot analóg jelekké alakítani, majd vissza. Ezáltal a hangminőség nem romlik
+a felvétel készítése során, és a felvétel készítése is egyszerűbb és gyorsabb lesz.
+A felvétel készítése után a felvételt a TASCAM DA-6400-ról egy USB meghajtóra
+menthetjük, majd további feldolgozásra továbbíthatjuk. 
+%----------------------------------------------------------------------------
+\begin
+    {figure}[H]
+    \centering
+    \includegraphics[width=80mm, keepaspectratio]{figures/da_6400.jpg}
+    \caption{TASCAM DA-6400 multitrack recorder}
+    \label{fig:tascam_da_6400}
+\end{figure}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
@@ -52,7 +97,17 @@ amely tovább növeli a rendszer teljesítményét és a maximálisan lefedhető
 % ME-U + M-DANTE kártya + ME-500
 
 
-
+%----------------------------------------------------------------------------
+\subsubsection{Martin Audio WPL LineArray rendszer} % Nagyobb rendezvényekre
+%----------------------------------------------------------------------------
+Amennyiben egy sokkal nagyobb rendezvényről van szó, és a jelenlegi rendszerünk már nem
+tudná lefedni a területet, akkor a rendszer bővítése mellett egy nagyobb szériás LineArray
+rendszer beszerzése is szükséges lehet. A Martin Audio WPL sorozatú ládái a jelenleg
+elérhető legnagyobb terméke a Wavefront Precision sorozatban. 
+Ebben az esetben a fő rendszert a WPL képviselné és WPC lenne az in-out fill rendszer.
+A WPM szériás ládák pedig delayként szolgálnának a terület hátsó részén.
+Viszont az említett teljes rendszerbővítésnek jelentős költségei vannak, így a rendszer
+bővítése előtt alaposan mérlegelni kell, megtérül-e a befektetés hosszabb távon.
 %----------------------------------------------------------------------------
 \begin
     {figure}[H]
@@ -63,32 +118,8 @@ amely tovább növeli a rendszer teljesítményét és a maximálisan lefedhető
 \end{figure}
 %----------------------------------------------------------------------------
 
-Amennyiben egy sokkal nagyobb rendezvényről van szó, és a jelenlegi rendszerünk már nem
-tudná lefedni a területet, akkor a rendszer bővítése mellett egy nagyobb szériás LineArray
-rendszer beszerzése is szükséges lehet. A Martin Audio WPL sorozatú ládái a jelenleg
-elérhető legnagyobb terméke a Wavefront Precision sorozatban. 
-Ebben az esetben a fő rendszert a WPL képviselné és WPC lenne az in-out fill rendszer.
-A WPM szériás ládák pedig delayként szolgálnának a terület hátsó részén.
-Viszont az említett teljes rendszerbővítésnek jelentős költségei vannak, így a rendszer
-bővítése előtt alaposan mérlegelni kell, hogy valóban szükséges-e a rendszer bővítése,
-megtérül-e a befektetés hosszabb távon.
-
-Ha a megrendelő igényli, akkor a rendszerhez különböző rögzítő eszközöket is beszerezhetünk.
-Lehetőségünk van megfelelő rögzítővel akár sávonként felvételt készíteni a koncertekről,
-amelyeket később visszahallgathatunk, vagy akár további feldolgozásra is továbbíthatunk.
-Emellett persze érdemes az élőben készült fő mix-et is rögzíteni a biztonság kedvéért.
-
-Ha a jövőben több vezeték nélküli mikrofonra is szükségünk lenne, akkor a rendszer bővítése
-során érdemes lehet nagyobb vezeték nélküli mikrofon rendszert is beszerezni. A jelenlegi
-rendszert a Shure Axient Digital sorozatú rendszerekkel lehetne bővíteni, amelyek
-kiváló minőségű vezeték nélküli mikrofonokat kínálnak, és a Dante hálózaton keresztül
-könnyen integrálhatóak a már meglévő rendszerbe. Ez a rendszer is jelentős költségekkel
-jár, így a bővítés előtt alaposan mérlegelni kell, hogy valóban szükséges-e a rendszer bővítése.
-
-
-
 %----------------------------------------------------------------------------
-\subsection{Bővítés nagyobb interfészre}
+\subsection{Bővítés nagyobb interfészre és keverőpultra - Allen \& Heath dLive}
 %----------------------------------------------------------------------------
 
 Tegyük fel, hogy egy szimfonikus zenekar koncertjét szeretnénk hangosítani, ahol a zenekar
