--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -110,6 +110,13 @@
   note = {Accessed on: 2024.02.25.}
 }
 
+@online{AUDINATEHISTORY,
+  author = {Audinate},
+  title = {Audinate History},
+  url = {https://www.audinate.com/company/history},
+  note = {Accessed on: 2024.09.11.}
+}
+
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
